--- a/main.ipynb
+++ b/main.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,8 +145,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will only take columns that don't have a single repeating entry"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def no_repeat(df):\n",
+    "    data = []\n",
+    "    for column in df.columns:\n",
+    "        if df[column].nunique() == 1:\n",
+    "            df.drop([column], inplace=True, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +229,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_repeat(pos_cases_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Code just adds a column to the dataframe that counts the number of days since the earliest data entry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "daysSince = []\n",
+    "for i in range(len(pos_cases_df)):\n",
+    "    daysSince.append(i)\n",
+    "pos_cases_df[\"daysSince\"] = daysSince"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -223,80 +271,17 @@
       "3          8.0        6.0                    0.118                  0.088   \n",
       "4          8.0        0.0                    0.118                  0.000   \n",
       "\n",
-      "   population  population_density  median_age  aged_65_older  aged_70_older  \\\n",
-      "0  67886004.0             272.898        40.8         18.517         12.527   \n",
-      "1  67886004.0             272.898        40.8         18.517         12.527   \n",
-      "2  67886004.0             272.898        40.8         18.517         12.527   \n",
-      "3  67886004.0             272.898        40.8         18.517         12.527   \n",
-      "4  67886004.0             272.898        40.8         18.517         12.527   \n",
-      "\n",
-      "   gdp_per_capita  extreme_poverty  cardiovasc_death_rate  \\\n",
-      "0       39753.244              0.2                122.137   \n",
-      "1       39753.244              0.2                122.137   \n",
-      "2       39753.244              0.2                122.137   \n",
-      "3       39753.244              0.2                122.137   \n",
-      "4       39753.244              0.2                122.137   \n",
-      "\n",
-      "   diabetes_prevalence  female_smokers  male_smokers  \\\n",
-      "0                 4.28            20.0          24.7   \n",
-      "1                 4.28            20.0          24.7   \n",
-      "2                 4.28            20.0          24.7   \n",
-      "3                 4.28            20.0          24.7   \n",
-      "4                 4.28            20.0          24.7   \n",
-      "\n",
-      "   hospital_beds_per_thousand  life_expectancy  human_development_index  \n",
-      "0                        2.54            81.32                    0.932  \n",
-      "1                        2.54            81.32                    0.932  \n",
-      "2                        2.54            81.32                    0.932  \n",
-      "3                        2.54            81.32                    0.932  \n",
-      "4                        2.54            81.32                    0.932  \n"
+      "   daysSince  \n",
+      "0          0  \n",
+      "1          1  \n",
+      "2          2  \n",
+      "3          3  \n",
+      "4          4  \n"
      ]
     }
    ],
    "source": [
     "print(pos_cases_df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 411 entries, 0 to 410\n",
-      "Data columns (total 18 columns):\n",
-      " #   Column                      Non-Null Count  Dtype  \n",
-      "---  ------                      --------------  -----  \n",
-      " 0   total_cases                 411 non-null    float64\n",
-      " 1   new_cases                   411 non-null    float64\n",
-      " 2   total_cases_per_million     411 non-null    float64\n",
-      " 3   new_cases_per_million       411 non-null    float64\n",
-      " 4   population                  411 non-null    float64\n",
-      " 5   population_density          411 non-null    float64\n",
-      " 6   median_age                  411 non-null    float64\n",
-      " 7   aged_65_older               411 non-null    float64\n",
-      " 8   aged_70_older               411 non-null    float64\n",
-      " 9   gdp_per_capita              411 non-null    float64\n",
-      " 10  extreme_poverty             411 non-null    float64\n",
-      " 11  cardiovasc_death_rate       411 non-null    float64\n",
-      " 12  diabetes_prevalence         411 non-null    float64\n",
-      " 13  female_smokers              411 non-null    float64\n",
-      " 14  male_smokers                411 non-null    float64\n",
-      " 15  hospital_beds_per_thousand  411 non-null    float64\n",
-      " 16  life_expectancy             411 non-null    float64\n",
-      " 17  human_development_index     411 non-null    float64\n",
-      "dtypes: float64(18)\n",
-      "memory usage: 57.9 KB\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(pos_cases_df.info())"
    ]
   },
   {
@@ -316,79 +301,29 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Code just adds a column to the dataframe that counts the number of days since the earliest data entry"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "daysSince = []\n",
-    "for i in range(len(pos_cases_df)):\n",
-    "    daysSince.append(i)\n",
-    "pos_cases_df[\"daysSince\"] = daysSince"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     total_cases  new_cases  total_cases_per_million  new_cases_per_million  \\\n",
-      "406    4261398.0     6684.0                62772.851                 98.459   \n",
-      "407    4267015.0     5617.0                62855.592                 82.742   \n",
-      "408    4271710.0     4695.0                62924.753                 69.160   \n",
-      "409    4276840.0     5130.0                63000.320                 75.568   \n",
-      "410    4282203.0     5363.0                63079.320                 79.000   \n",
-      "\n",
-      "     population  population_density  median_age  aged_65_older  aged_70_older  \\\n",
-      "406  67886004.0             272.898        40.8         18.517         12.527   \n",
-      "407  67886004.0             272.898        40.8         18.517         12.527   \n",
-      "408  67886004.0             272.898        40.8         18.517         12.527   \n",
-      "409  67886004.0             272.898        40.8         18.517         12.527   \n",
-      "410  67886004.0             272.898        40.8         18.517         12.527   \n",
-      "\n",
-      "     gdp_per_capita  extreme_poverty  cardiovasc_death_rate  \\\n",
-      "406       39753.244              0.2                122.137   \n",
-      "407       39753.244              0.2                122.137   \n",
-      "408       39753.244              0.2                122.137   \n",
-      "409       39753.244              0.2                122.137   \n",
-      "410       39753.244              0.2                122.137   \n",
-      "\n",
-      "     diabetes_prevalence  female_smokers  male_smokers  \\\n",
-      "406                 4.28            20.0          24.7   \n",
-      "407                 4.28            20.0          24.7   \n",
-      "408                 4.28            20.0          24.7   \n",
-      "409                 4.28            20.0          24.7   \n",
-      "410                 4.28            20.0          24.7   \n",
-      "\n",
-      "     hospital_beds_per_thousand  life_expectancy  human_development_index  \\\n",
-      "406                        2.54            81.32                    0.932   \n",
-      "407                        2.54            81.32                    0.932   \n",
-      "408                        2.54            81.32                    0.932   \n",
-      "409                        2.54            81.32                    0.932   \n",
-      "410                        2.54            81.32                    0.932   \n",
-      "\n",
-      "     daysSince  \n",
-      "406        406  \n",
-      "407        407  \n",
-      "408        408  \n",
-      "409        409  \n",
-      "410        410  \n"
+      "1\n"
      ]
     }
    ],
    "source": [
-    "print(pos_cases_df.tail())"
+    "NN_model = Sequential()\n",
+    "# Input layer\n",
+    "NN_model.add(InputLayer())\n",
+    "# Hidden Layers\n",
+    "NN_modle.add(128, kernel_initializer=\"normal\", activation=\"relu\")\n",
+    "NN_modle.add(256, kernel_initializer=\"normal\", activation=\"relu\")\n",
+    "NN_modle.add(256, kernel_initializer=\"normal\", activation=\"relu\")\n",
+    "NN_modle.add(256, kernel_initializer=\"normal\", activation=\"relu\")\n",
+    "# Output layer \n",
+    "NN_modle.add(1, kernel_initializer=\"normal\", activation=\"linear\")"
    ]
   },
   {
