Prediction Graphs for 1,2,3,10,50

--- a/Report/SNS_Assignment_20-21.tex
+++ b/Report/SNS_Assignment_20-21.tex
@@ -54,3 +54,7 @@
 
 % Any images to be used in this report or other reports should be placed under the resources directory
 %\graphicspath{{../resources/}}
+
+\begin{document}
+	content...
+\end{document}
