--- a/main.ipynb
+++ b/main.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import preprocessing\n",
     "import pandas as pd\n",
@@ -21,6 +13,7 @@
     "import os\n",
     "import csv\n",
     "import keras\n",
+    "import tabulate\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from keras.models import Sequential\n",
@@ -193,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,11 +258,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|    |   total_cases |   new_cases |   total_cases_per_million |   new_cases_per_million |   stringency_index |\n",
+      "|---:|--------------:|------------:|--------------------------:|------------------------:|-------------------:|\n",
+      "|  0 |             2 |           2 |                     0.029 |                   0.029 |               8.33 |\n",
+      "|  1 |             2 |           0 |                     0.029 |                   0     |               8.33 |\n",
+      "|  2 |             2 |           0 |                     0.029 |                   0     |              11.11 |\n",
+      "|  3 |             8 |           6 |                     0.118 |                   0.088 |              11.11 |\n",
+      "|  4 |             8 |           0 |                     0.118 |                   0     |              11.11 |\n"
+     ]
+    }
+   ],
    "source": [
-    "normalise_dataframe(pos_cases_df)"
+    "print((pos_cases_df.head()).to_markdown())"
    ]
   },
   {
