--- a/main.ipynb
+++ b/main.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,6 +296,29 @@
     "for i in range(len(pos_cases_df)):\n",
     "    daysSince.append(i)\n",
     "pos_cases_df[\"daysSince\"] = daysSince"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|    |   total_cases |   new_cases |   total_cases_per_million |   new_cases_per_million |   stringency_index |   daysSince |\n",
+      "|---:|--------------:|------------:|--------------------------:|------------------------:|-------------------:|------------:|\n",
+      "|  0 |             2 |           2 |                     0.029 |                   0.029 |               8.33 |           0 |\n",
+      "|  1 |             2 |           0 |                     0.029 |                   0     |               8.33 |           1 |\n",
+      "|  2 |             2 |           0 |                     0.029 |                   0     |              11.11 |           2 |\n",
+      "|  3 |             8 |           6 |                     0.118 |                   0.088 |              11.11 |           3 |\n",
+      "|  4 |             8 |           0 |                     0.118 |                   0     |              11.11 |           4 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((pos_cases_df.head()).to_markdown())"
    ]
   },
   {
